add dropdown in manage component

--- a/src/app/feature/feature.component.html
+++ b/src/app/feature/feature.component.html
@@ -1,7 +1,10 @@
 <div><app-fheader></app-fheader></div>
 <div ><app-sidebar></app-sidebar></div>
-<div class="appside"><router-outlet></router-outlet></div>
-<div ><app-ffooter></app-ffooter></div>
+<div class="appside">
+    <router-outlet></router-outlet>
+    <app-ffooter></app-ffooter>
+</div>
+
 
 
 
