--- a/src/app/feature/manage-rooms/manage-rooms.component.html
+++ b/src/app/feature/manage-rooms/manage-rooms.component.html
@@ -37,89 +37,41 @@
                 </div>
             </form>
             <div class="table-responsive">
-                <div id="DataTables_Table_0_wrapper" class="dataTables_wrapper no-footer"><table class="table display data-table text-nowrap dataTable no-footer" id="DataTables_Table_0" role="grid">
-                    <thead>
-                        <tr role="row"><th class="sorting_asc" rowspan="1" colspan="1" aria-label="S.No" style="width: 85.4531px;">S.No</th><th class="sorting" tabindex="0" aria-controls="DataTables_Table_0" rowspan="1" colspan="1" aria-label="Seater: activate to sort column ascending" style="width: 106.484px;">Seater</th><th class="sorting" tabindex="0" aria-controls="DataTables_Table_0" rowspan="1" colspan="1" aria-label="Room No.: activate to sort column ascending" style="width: 150.188px;">Room No.</th><th class="sorting" tabindex="0" aria-controls="DataTables_Table_0" rowspan="1" colspan="1" aria-label="Fee(PM): activate to sort column ascending" style="width: 132.781px;">Fee(PM)</th><th class="sorting" tabindex="0" aria-controls="DataTables_Table_0" rowspan="1" colspan="1" aria-label="Posting Date: activate to sort column ascending" style="width: 267.609px;">Posting Date</th><th class="sorting_disabled" rowspan="1" colspan="1" aria-label="Action" style="width: 108.484px;">Action</th></tr>
-                    </thead>
-                    <tbody>
-                        
-                        
-                        
-                        
-                    <tr role="row" class="odd">
-                            <td class="sorting_1">1</td>
-                            <td>5</td>
-                            <td>100</td>
-                            <td>8000</td>
-                            <td>2020-04-11 15:43:43</td>
-                            <td>
-                                <div class="dropdown">
-                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
-                                        <span class="flaticon-more-button-of-three-dots"></span>
-                                    </a>
-                                    <div class="dropdown-menu dropdown-menu-right">
-                                        <a class="dropdown-item" href="#"><i class="fas fa-times text-orange-red"></i>Close</a>
-                                        <a class="dropdown-item" href="edit-room-details.html"><i class="fas fa-cogs text-dark-pastel-green"></i>Edit</a>
-                                        <a class="dropdown-item" href="#"><i class="fas fa-redo-alt text-orange-peel"></i>Refresh</a>
-                                    </div>
-                                </div>
-                            </td>
-                        </tr><tr role="row" class="even">
-                            <td class="sorting_1">2</td>
-                            <td>5</td>
-                            <td>100</td>
-                            <td>8000</td>
-                            <td>2020-04-11 15:43:43</td>
-                            <td>
-                                <div class="dropdown">
-                                    <a href="#"class="dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
-                                        <span class="flaticon-more-button-of-three-dots"></span>
-                                    </a>
-                                    <div class="dropdown-menu dropdown-menu-right">
-                                        <a class="dropdown-item" href="#"><i class="fas fa-times text-orange-red"></i>Close</a>
-                                        <a class="dropdown-item" href="edit-room-details.html"><i class="fas fa-cogs text-dark-pastel-green"></i>Edit</a>
-                                        <a class="dropdown-item" href="#"><i class="fas fa-redo-alt text-orange-peel"></i>Refresh</a>
-                                    </div>
-                                </div>
-                            </td>
-                        </tr><tr role="row" class="odd">
-                            <td class="sorting_1">3</td>
-                            <td>5</td>
-                            <td>100</td>
-                            <td>8000</td>
-                            <td>2020-04-11 15:43:43</td>
-                            <td>
-                                <div class="dropdown">
-                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
-                                        <span class="flaticon-more-button-of-three-dots"></span>
-                                    </a>
-                                    <div class="dropdown-menu dropdown-menu-right">
-                                        <a class="dropdown-item" href="#"><i class="fas fa-times text-orange-red"></i>Close</a>
-                                        <a class="dropdown-item" href="edit-room-details.html"><i class="fas fa-cogs text-dark-pastel-green"></i>Edit</a>
-                                        <a class="dropdown-item" href="#"><i class="fas fa-redo-alt text-orange-peel"></i>Refresh</a>
-                                    </div>
-                                </div>
-                            </td>
-                        </tr><tr role="row" class="even">
-                            <td class="sorting_1">4</td>
-                            <td>5</td>
-                            <td>100</td>
-                            <td>8000</td>
-                            <td>2020-04-11 15:43:43</td>
-                            <td>
-                                <div class="dropdown">
-                                    <a  class="dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
-                                        <span class="flaticon-more-button-of-three-dots"></span>
-                                    </a>
-                                    <div class="dropdown-menu dropdown-menu-right">
-                                        <a class="dropdown-item" href="#"><i class="fas fa-times text-orange-red"></i>Close</a>
-                                        <a class="dropdown-item" href="edit-room-details.html"><i class="fas fa-cogs text-dark-pastel-green"></i>Edit</a>
-                                        <a class="dropdown-item" href="#"><i class="fas fa-redo-alt text-orange-peel"></i>Refresh</a>
-                                    </div>
-                                </div>
-                            </td>
-                        </tr></tbody>
-                </table><div class="dataTables_paginate paging_simple_numbers" id="DataTables_Table_0_paginate"><a class="paginate_button previous disabled" aria-controls="DataTables_Table_0" data-dt-idx="0" tabindex="0" id="DataTables_Table_0_previous">Previous</a><span><a class="paginate_button current" aria-controls="DataTables_Table_0" data-dt-idx="1" tabindex="0">1</a></span><a class="paginate_button next disabled" aria-controls="DataTables_Table_0" data-dt-idx="2" tabindex="0" id="DataTables_Table_0_next">Next</a></div></div>
+                <div id="DataTables_Table_0_wrapper" class="dataTables_wrapper no-footer"><!-- your-component.component.html -->
+                    <table class="table display data-table text-nowrap dataTable no-footer" id="DataTables_Table_0" role="grid">
+                      <thead>
+                        <tr role="row">
+                          <th class="sorting_asc" rowspan="1" colspan="1" aria-label="S.No" style="width: 85.4531px;">S.No</th>
+                          <th class="sorting" tabindex="0" aria-controls="DataTables_Table_0" rowspan="1" colspan="1" aria-label="Seater: activate to sort column ascending" style="width: 106.484px;">Seater</th>
+                          <th class="sorting" tabindex="0" aria-controls="DataTables_Table_0" rowspan="1" colspan="1" aria-label="Room No.: activate to sort column ascending" style="width: 150.188px;">Room No.</th>
+                          <th class="sorting" tabindex="0" aria-controls="DataTables_Table_0" rowspan="1" colspan="1" aria-label="Fee(PM): activate to sort column ascending" style="width: 132.781px;">Fee(PM)</th>
+                          <th class="sorting" tabindex="0" aria-controls="DataTables_Table_0" rowspan="1" colspan="1" aria-label="Posting Date: activate to sort column ascending" style="width: 267.609px;">Posting Date</th>
+                          <th class="sorting_disabled" rowspan="1" colspan="1" aria-label="Action" style="width: 108.484px;">Action</th>
+                        </tr>
+                      </thead>
+                      <tbody>
+                        <tr *ngFor="let room of roomData">
+                          <td>{{ room.serialNumber }}</td>
+                          <td>{{ room.seater }}</td>
+                          <td>{{ room.roomNumber }}</td>
+                          <td>{{ room.feePerMonth }}</td>
+                          <td>{{ room.postingDate }}</td>
+                          <td>
+                            <div class="dropdown" [ngClass]="{ 'show': room.isDropdownOpen }">
+                              <a class="dropdown-toggle" (click)="toggleDropdown(room)" aria-expanded="false">
+                                <span class="flaticon-more-button-of-three-dots"></span>
+                              </a>
+                              <div class="dropdown-menu dropdown-menu-right" [ngClass]="{ 'show': room.isDropdownOpen }">
+                                <a class="dropdown-item" href="#"><i class="fas fa-times text-orange-red"></i>Close</a>
+                                <a class="dropdown-item" href="edit-room-details.html"><i class="fas fa-cogs text-dark-pastel-green"></i>Edit</a>
+                                <a class="dropdown-item" href="#"><i class="fas fa-redo-alt text-orange-peel"></i>Refresh</a>
+                              </div>
+                            </div>
+                          </td>
+                        </tr>
+                      </tbody>
+                    </table>
+                    <div class="dataTables_paginate paging_simple_numbers" id="DataTables_Table_0_paginate"><a class="paginate_button previous disabled" aria-controls="DataTables_Table_0" data-dt-idx="0" tabindex="0" id="DataTables_Table_0_previous">Previous</a><span><a class="paginate_button current" aria-controls="DataTables_Table_0" data-dt-idx="1" tabindex="0">1</a></span><a class="paginate_button next disabled" aria-controls="DataTables_Table_0" data-dt-idx="2" tabindex="0" id="DataTables_Table_0_next">Next</a></div></div>
             </div>
         </div>
     </div>
