--- a/src/app/feature/sidebar/sidebar.component.html
+++ b/src/app/feature/sidebar/sidebar.component.html
@@ -17,15 +17,7 @@
           </a>
           <ul class="nav sub-group-menu" [ngClass]="{'menu-open': activeMenuItem === 'registration', 'hide': activeMenuItem !== 'registration'}">
             <li class="nav-item">
-<<<<<<< HEAD
-<<<<<<< HEAD
-              <a routerLink="/feature/guest-registration" class="nav-link"><i class="fas fa-angle-right"></i>Guest Registration</a>
-=======
-  <a routerLink="/feature/guest-registration" class="nav-link"><i class="fas fa-angle-right"></i>Guest Registration</a>
->>>>>>> origin/Anil
-=======
                <a routerLink="/feature/guest-registration" (click)="change(false)" class="nav-link"><i class="fas fa-angle-right"></i>Guest Registration</a>
->>>>>>> origin/Pawan
             </li>
             <li class="nav-item">
               <a routerLink="/feature/mange-guest" (click)="change(false)" class="nav-link"><i class="fas fa-angle-right"></i>Manage Guest</a>
@@ -127,7 +119,7 @@
               <a routerLink="/feature/complaint" (click)="change(false)" class="nav-link"><i class="fas fa-angle-right"></i>Complaint</a>
             </li>
             <li class="nav-item">
-              <a routerLink="/feature/report" (click)="change(false)" class="nav-link"><i class="fas fa-angle-right"></i>Report</a>
+              <a routerLink="/feature/report" class="nav-link"><i class="fas fa-angle-right"></i>Report</a>
             </li>
           </ul>
         </li>
